--- a/style/main.scss
+++ b/style/main.scss
@@ -31,6 +31,12 @@ nav a:visited {
     color: var(--text);
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 button {
     background-color: var(--primary);
     border-radius: var(--radius);
@@ -42,4 +48,41 @@ button {
 
 button:hover {
     background-color: var(--secondary);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input[type=submit] {
+    display: block;
+    background-color: var(--secondary);
+    border: 1px solid var(--secondary);
+    border-radius: var(--radius);
+    color: var(--text);
+    cursor: pointer;
+    margin: var(--padding);
+    padding: calc(var(--padding) * 3);
+    max-width: fit-content;
+}
+
+input[type=radio] {
+    visibility: hidden;
+}
+
+label {
+    display: inline-block;
+    padding: calc(var(--padding) * 3);
+    border: 1px solid var(--primary);
+    border-radius: var(--radius);
+}
+
+label:hover {
+    cursor: pointer;
+}
+
+input[type=radio]:checked + label {
+    background-color: var(--primary);
 }
