Fix first view of the colors of nav links

--- a/style/main.scss
+++ b/style/main.scss
@@ -23,6 +23,7 @@ nav {
 }
 
 nav a {
+    color: var(--text);
     text-transform: uppercase;
     text-decoration: var(--primary) wavy underline;
 }
